[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
postcard = { git = "https://github.com/jamesmunns/postcard", features = [
    "experimental-derive",
    "use-std",
] }
schemars = "0.8.21"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
postcard = { git = "https://github.com/jamesmunns/postcard" }
serde_json = "1"
test-case = "3.3.1"
