[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

[features]
postcard-schema = ["dep:postcard"]

[dependencies]
postcard = { version = "1", features = [
    "experimental-derive",
    "use-std",
], optional = true }
schemars = "0.8.21"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
postcard = { version = "1" }
serde_json = "1"
test-case = "3.3.1"
